# unix-toolkit

./: .ctx.db  .ctx.md  .ctx.md.new  .gitignore  PORTFOLIO.md  README.md  React frontend architecture with WebSockets - Claude  TASKS-DESIGN.md  ai.md  ai.md.new  anydesk  anydesk.sh  audit-report.txt  bootstrap.sh  clipso.sh  compose_appen.yml  dicgen.go  dicgen2.go  fehbg  freelancer.md  game-of-life.py  install.sh  moveWorkspace.sh  mv-depth.sh  notifydeadd  notifydeadd.sh  renameWorkspace.sh  repos.tsv  run_moonlight.sh  run_sunshine.sh  rwxdir-scan  setup_moonlight.sh  setup_sunshine.sh  toggle-vol  ut  ut-collect.sh  ut-setup.sh  vol  wacom  wlab.sh  (+1 more)
aicli/: README.md
aicli/containers/memory-engine/: Cargo.toml  Containerfile
aicli/containers/memory-engine/src/: main.rs
audio/: toggle-mic  vol
audit-privacy/: README.md  audit-privacy.sh  install.sh
clipso/: README.md  clipso.sh  install.sh
desktop/: choose-font-alacritty.sh  deadd.sh  notifydeadd  press_e.sh  xcolor
display/: reset-mouse.sh  set-i3-gaps.sh  setscreen  xrandr-Virtual.sh
docker/: compose_appen.yml
files/: fixsuffix.sh  mv-depth.sh
installer-from-local-pcs/: instalador.sh
mac-updates/: install.sh
misc/: nmapAgresiveFasterOut.sh
neko/: addneko.sh  neko.sh  nekoyay.sh  rmneko.sh
neko-gba/: README.md  neko-gba-setup.sh
noemap/: .ctx.md  .gitignore  README.md  README.txt  SHA256SUMS  install.sh
nvim-setup/: README.md  setup.sh  versions.env
persistent-container-podman/: Dockerfile
rsync-folder/: README.md  excludes.txt  setup.sh
rwxdir/: README.md
setup-mac/: README.md  (+3 more)
(+189 files in other folders)
