[package]
name = "memory-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "memory-engine"
path = "src/main.rs"

[dependencies]
rusqlite   = { version = "0.31", features = ["bundled"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true
